# mkdocs-link-embeds

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  changelog-configuration.json
.github/workflows/: ci.yml  documentation.yml  issues-stale.yml  release-pypi-test.yml  release-pypi.yml
about/backers/: index.html
about/changelog/: index.html
about/conventions/: index.html
about/license/: index.html
blog/: index.html
demo/: index.html
docs/: mkdocs.yml
docs/docs/: demo.md  home.md  install.md  usage.md
docs/docs/about/: changelog.md  conventions.md  license.md
docs/docs/setup/: install.md  stylesheet.md
docs/docs/stylesheets/: extra.css
docs/docs/usage/: configs.md  formatting.md  properties.md
docs/home/: index.html
docs/material/overrides/: home.html
docs/material/overrides/hooks/: shortcodes.py
home/: index.html
mkdocs_link_embeds_plugin/: fetchurl.py  opengraph.py  plugin.py
mkdocs_link_embeds_plugin.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  entry_points.txt  requires.txt  top_level.txt
mkdocs_link_embeds_plugin/resources/: fallback.html  link-embeds.css  view.html
search/: search_index.json
setup/install/: index.html
setup/stylesheet/: index.html
stylesheets/: extra.css
usage/configs/: index.html
usage/formatting/: index.html
usage/properties/: index.html
