[build-system]
requires = ['setuptools>=60.0.0']
build-backend = 'setuptools.build_meta'

[project]
name = "mkdocs-link-embeds-plugin"
dynamic = ["version"]
description = "Mkdocs plugin which shows embedded links in a more elegant manner."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=2.7"
authors = [
  { name="Aetherinox", email="aetherinox@proton.me" },
]
keywords = [
    "mkdocs",
    "readme",
    "wiki",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7"
]
dependencies = [
    "mkdocs>=1.2.0",
    "beautifulsoup4>=4.11.0",
    "requests>=2.20.0",
]

[project.urls]
"Homepage" = "https://github.com/Aetherinox/mkdocs-link-embeds"
"Bug Tracker" = "https://github.com/Aetherinox/mkdocs-link-embeds/issues"

[project.entry-points."mkdocs.plugins"]
link-embeds = "mkdocs_link_embeds_plugin.plugin:LinkEmbedsPlugin"